Fix sidebar and navbar overlap

--- a/AdminServer/static/css/base.css
+++ b/AdminServer/static/css/base.css
@@ -108,7 +108,7 @@ body {
   left: 0;
   top: 0;
   width: 100%;
-  padding: 45px 0 0;
+  padding: 10px 0 0;
   background-color: #2c3136;
   visibility: hidden;
   opacity: 0;
@@ -180,7 +180,6 @@ body {
     top: auto;
     width: 110px;
     min-height: 100vh;
-    padding-top: 55px;
     visibility: visible;
     opacity: 1;
     overflow: visible;
